# lets-debate

./: README.md
backend/: alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: README.md  env.py
backend/alembic/versions/: 29e2bdeb4d73_add_refresh_tokens_table.py  5ec37d6fc5cc_add_user_api_keys.py  65a85c1fcc64_drop_consensus_score.py  c9db3e061f9b_.py
backend/app/: config.py  dependencies.py  main.py
backend/app/core/: encryption.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  agent_config.py  debate.py  message.py  refresh_token.py  user.py
backend/app/routers/: auth.py  debates.py  websocket.py
backend/app/schemas/: __init__.py  auth.py  debate.py  message.py  websocket.py
backend/app/services/: __init__.py  auth_service.py  debate_service.py  llm_service.py  websocket_service.py
frontend/: README.md  package.json  proxy.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/debates/: layout.tsx  page.tsx
frontend/app/debates/[id]/: page.tsx
frontend/app/debates/new/: page.tsx
frontend/app/login/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/register/: page.tsx
frontend/components/: AgentCard.tsx  ChatMessage.tsx  Header.tsx
frontend/lib/: api.ts  ws.ts
frontend/store/: auth.ts  debate.ts
