[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.129.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-jose[cryptography]>=3.5.0",
    "redis>=7.2.0",
    "sqlalchemy>=2.0.46",
    "uvicorn[standard]>=0.41.0",
    "python-multipart>=0.0.22",
    "psycopg[binary]>=3.3.3",
]
